XiaomiParts: use SettingsLib
switch to using support lib so that style always
follows whatever is defined global there

Change-Id: I0ddb52344e2e3334ae10f60ffde89ecee7e79c65

# Conflicts:
#	XiaomiParts/res/values-ru/strings.xml
#	XiaomiParts/res/values-uk/strings.xml
#	XiaomiParts/res/values/strings.xml
#	XiaomiParts/src/com/mdroid/settings/device/DeviceSettings.java

--- a/XiaomiParts/res/values-ru/strings.xml
+++ b/XiaomiParts/res/values-ru/strings.xml
@@ -17,11 +17,8 @@
     <string name="app_name">Xiaomi</string>
     <string name="advanced_settings">Настройки устройства</string>
     <string name="category_vibrator">Вибрация</string>
-    <string name="vib_strength_title_head">Сила</string>
-    <string name="vib_strength_summary_head">Установить силу вибрации</string>
+    <string name="vib_strength_title_head">Сила вибрации</string>
     <string name="category_torch">Фонарик</string>
     <string name="yellow_torch_brightness_title_head">Максимальная яркость желтого светодиода</string>
-    <string name="yellow_torch_brightness_summary_head">Установить максимальную яркость желтого светодиода</string>
     <string name="white_torch_brightness_title_head">Максимальная яркость белого светодиода</string>
-    <string name="white_torch_brightness_summary_head">Установить максимальную яркость белого светодиода</string>
 </resources>
