--- a/XiaomiParts/res/values/strings.xml
+++ b/XiaomiParts/res/values/strings.xml
@@ -17,11 +17,8 @@
     <string name="app_name">Xiaomi</string>
     <string name="advanced_settings">Advanced</string>
     <string name="category_vibrator">Vibrator</string>
-    <string name="vib_strength_title_head">Strength</string>
-    <string name="vib_strength_summary_head">Define the strength of the vibrator</string>
+    <string name="vib_strength_title_head">Strength of the vibrator</string>
     <string name="category_torch">Torch</string>
     <string name="yellow_torch_brightness_title_head">Yellow led maximum brightness</string>
-    <string name="yellow_torch_brightness_summary_head">Define the maximum brightness of the yellow led</string>
     <string name="white_torch_brightness_title_head">White led maximum brightness</string>
-    <string name="white_torch_brightness_summary_head">Define the maximum brightness of the white led</string>
 </resources>
