XiaomiParts: add kcal support
taken from:
https://github.com/omnirom/android_device_leeco_zl1/commit/cdb1b9e2ae7f7612e0ca391c33e68ddedb181dce
credits: @darkobas

Also includes commits from:
https://github.com/Quantummech2000/DT-zenfone3

Signed-off-by: Nick <nickgunale@gmail.com>

# Conflicts:
#	XiaomiParts/res/values-ru/strings.xml
#	XiaomiParts/res/values-uk/strings.xml
#	XiaomiParts/res/values/strings.xml
#	XiaomiParts/res/xml/main.xml
#	XiaomiParts/src/com/mdroid/settings/device/Startup.java
#	rootdir/init.qcom.rc

--- a/XiaomiParts/res/values-ru/strings.xml
+++ b/XiaomiParts/res/values-ru/strings.xml
@@ -21,4 +21,21 @@
     <string name="category_torch">Фонарик</string>
     <string name="yellow_torch_brightness_title_head">Максимальная яркость желтого светодиода</string>
     <string name="white_torch_brightness_title_head">Максимальная яркость белого светодиода</string>
+    <string name="graphics_title">Графика</string>
+    <string name="kcal_title">Цвет экрана</string>
+    <string name="kcal_summary">Калибровка цвета экрана с помощью KCAL</string>
+    <string name="kcal_enabled_title">Включить KCAL</string>
+    <string name="kcal_enabled_summary">Включить калибровку экрана с помощью KCAL</string>
+    <string name="kcal_red">Красный</string>
+    <string name="kcal_green">Зеленый</string>
+    <string name="kcal_blue">Синий</string>
+    <string name="kcal_saturation">Насыщенность</string>
+    <string name="kcal_contrast">Контраст</string>
+    <string name="kcal_value">Значение</string>
+    <string name="kcal_hue">Тон</string>
+    <string name="kcal_invert_title">Инвертировать</string>
+    <string name="kcal_invert_summary">Инвертировать все цвета экрана</string>
+    <string name="kcal_greyscale_title">Оттенки серого</string>
+    <string name="kcal_greyscale_summary">Полностью отключить насыщенность</string>
+    <string name="menu_reset">Сбросить</string>
 </resources>
