--- a/XiaomiParts/res/values-uk/strings.xml
+++ b/XiaomiParts/res/values-uk/strings.xml
@@ -21,4 +21,21 @@
     <string name="category_torch">Ліхтарик</string>
     <string name="yellow_torch_brightness_title_head">Максимальна яскравість жовтого світлодіода</string>
     <string name="white_torch_brightness_title_head">Максимальна яскравість білого світлодіода</string>
+    <string name="graphics_title">Графіка</string>
+    <string name="kcal_title">Колір екрану</string>
+    <string name="kcal_summary">Калібровка кольору екрану за допомогою KCAL</string>
+    <string name="kcal_enabled_title">Увімкнути KCAL</string>
+    <string name="kcal_enabled_summary">Увімкнути калібровку екрану за допомогою KCAL</string>
+    <string name="kcal_red">Червоний</string>
+    <string name="kcal_green">Зелений</string>
+    <string name="kcal_blue">Синій</string>
+    <string name="kcal_saturation">Насиченість</string>
+    <string name="kcal_contrast">Контраст</string>
+    <string name="kcal_value">Значення</string>
+    <string name="kcal_hue">Тон</string>
+    <string name="kcal_invert_title">Інвертувати</string>
+    <string name="kcal_invert_summary">Інвертувати всі кольори екрану</string>
+    <string name="kcal_greyscale_title">Відтенки сірого</string>
+    <string name="kcal_greyscale_summary">Повністю вимкнути насиченість</string>
+    <string name="menu_reset">Скинути</string>
 </resources>
