--- a/XiaomiParts/res/values/strings.xml
+++ b/XiaomiParts/res/values/strings.xml
@@ -21,4 +21,21 @@
     <string name="category_torch">Torch</string>
     <string name="yellow_torch_brightness_title_head">Yellow led maximum brightness</string>
     <string name="white_torch_brightness_title_head">White led maximum brightness</string>
+    <string name="graphics_title">Graphics</string>
+    <string name="kcal_title">Display color</string>
+    <string name="kcal_summary">Display color calibration using KCAL</string>
+    <string name="kcal_enabled_title">Enable KCAL</string>
+    <string name="kcal_enabled_summary">Turn on display calibration using KCAL</string>
+    <string name="kcal_red">Red</string>
+    <string name="kcal_green">Green</string>
+    <string name="kcal_blue">Blue</string>
+    <string name="kcal_saturation">Saturation</string>
+    <string name="kcal_contrast">Constrast</string>
+    <string name="kcal_value">Value</string>
+    <string name="kcal_hue">Hue</string>
+    <string name="kcal_invert_title">Invert</string>
+    <string name="kcal_invert_summary">Invert all screen colors</string>
+    <string name="kcal_greyscale_title">Greyscale</string>
+    <string name="kcal_greyscale_summary">Fully disable saturation</string>
+    <string name="menu_reset">Reset</string>
 </resources>
