--- a/doze/res/values-cs/strings.xml
+++ b/doze/res/values-cs/strings.xml
@@ -17,40 +17,25 @@
      limitations under the License.
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <!-- Label for feature switch [CHAR LIMIT=30] -->
-    <string name="switch_bar_on">Zapnuto</string>
-
-    <!-- Label for feature switch [CHAR LIMIT=30] -->
-    <string name="switch_bar_off">Vypnuto</string>
-
-    <!-- Device specific settings -->
-    <string name="device_settings_app_name">Pokročilé nastavení</string>
-
-    <!-- Ambient Display -->
-    <string name="ambient_display_title">Ambientní displej</string>
-    <string name="ambient_display_enable_title">Ambientní displej</string>
-    <string name="ambient_display_enable_summary">Zapnout obrazovku po přijetí upozornění</string>
-    <string name="ambient_display_summary">Zapnout obrazovku po přijetí upozornění</string>
-    <string name="ambient_display_summary_on">Po přijetí upozornění se obrazovka probudí</string>
-    <string name="ambient_display_summary_off">Po přijetí upozornění se obrazovka neprobudí</string>
-
-    <!-- Tilt sensor -->
-    <string name="tilt_sensor_title">Senzor naklonění</string>
-
-    <!-- Proximity sensor -->
-    <string name="proximity_sensor_title">Proximity senzor</string>
-
-    <!-- Hand wave gesture -->
-    <string name="hand_wave_gesture_title">Mmávnutí rukou</string>
-    <string name="hand_wave_gesture_summary">Přejděte rukou nad obrazovkou pro zobrazení upozornění</string>
-    <string name="hand_wave_gesture_flat_title">Zjišťovat polohu zařízení</string>
-    <string name="hand_wave_gesture_flat_summary">Zobrazovat upozornění pouze tehdy, když telefon položený na rovném povrchu s obrazovkou směřující vzhůru</string>
-
-    <!-- Pick-up gesture -->
-    <string name="pick_up_gesture_title">Zvednutí</string>
-    <string name="pick_up_gesture_summary">Zobrazit upozornění při zvednutí telefonu</string>
-
-    <!-- Pocket gesture -->
-    <string name="pocket_gesture_title">Kapsa</string>
-    <string name="pocket_gesture_summary">Zobrazit upozornění při vyjmutí telefonu z kapsy</string>
+  <!-- Label for feature switch [CHAR LIMIT=30] -->
+  <string name="switch_bar_on">Zapnuto</string>
+  <!-- Label for feature switch [CHAR LIMIT=30] -->
+  <string name="switch_bar_off">Vypnuto</string>
+  <!-- Device specific settings -->
+  <string name="device_settings_app_name">Pokročilé nastavení</string>
+  <!-- Ambient Display -->
+  <string name="ambient_display_title">Ambientní zobrazení</string>
+  <!-- Tilt sensor -->
+  <string name="tilt_sensor_title">Senzor náklonu</string>
+  <!-- Proximity sensor -->
+  <string name="proximity_sensor_title">Senzor přiblížení</string>
+  <!-- Hand wave gesture -->
+  <string name="hand_wave_gesture_title">Mávání rukou</string>
+  <string name="hand_wave_gesture_summary">Upozornit pulsováním při zamáváním rukou</string>
+  <!-- Pick-up gesture -->
+  <string name="pick_up_gesture_title">Sebrání</string>
+  <string name="pick_up_gesture_summary">Upozornit pulsováním při sebrání</string>
+  <!-- Pocket gesture -->
+  <string name="pocket_gesture_title">Kapsa</string>
+  <string name="pocket_gesture_summary">Upozornit pulsováním při vyjmutí z kapsy</string>
 </resources>
