--- a/doze/res/values-sk/strings.xml
+++ b/doze/res/values-sk/strings.xml
@@ -17,40 +17,25 @@
      limitations under the License.
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <!-- Label for feature switch [CHAR LIMIT=30] -->
-    <string name="switch_bar_on">Zapnuté</string>
-
-    <!-- Label for feature switch [CHAR LIMIT=30] -->
-    <string name="switch_bar_off">Vypnuté</string>
-
-    <!-- Device specific settings -->
-    <string name="device_settings_app_name">Pokročilé nastavenia</string>
-
-    <!-- Ambient Display -->
-    <string name="ambient_display_title">Ambientny displej</string>
-    <string name="ambient_display_enable_title">Ambientny displej</string>
-    <string name="ambient_display_enable_summary">Zapnúť obrazovku po prijatí upozornení</string>
-    <string name="ambient_display_summary">Zapnúť obrazovku po prijatí upozornení</string>
-    <string name="ambient_display_summary_on">Po prijatí upozornení sa obrazovka prebudí</string>
-    <string name="ambient_display_summary_off">Po prijatí upozornení sa obrazovka neprebudí</string>
-
-    <!-- Tilt sensor -->
-    <string name="tilt_sensor_title">Senzor naklonenia</string>
-
-    <!-- Proximity sensor -->
-    <string name="proximity_sensor_title">Proximity senzor</string>
-
-    <!-- Hand wave gesture -->
-    <string name="hand_wave_gesture_title">Mávnutie rukou</string>
-    <string name="hand_wave_gesture_summary">Prejdite rukou nad obrazovkou pre zobrazenie upozornení</string>
-    <string name="hand_wave_gesture_flat_title">Zisťovať polohu zariadenia</string>
-    <string name="hand_wave_gesture_flat_summary">Zobrazovať upozornenia iba vtedy, keď telefón položený na rovnom povrchu s obrazovkou smerujúcou nahor</string>
-
-    <!-- Pick-up gesture -->
-    <string name="pick_up_gesture_title">Zdvihnutie</string>
-    <string name="pick_up_gesture_summary">Zobraziť upozornenia pri zdvihnutí telefónu</string>
-
-    <!-- Pocket gesture -->
-    <string name="pocket_gesture_title">Vrecko</string>
-    <string name="pocket_gesture_summary">Zobraziť upozornenia pri vybratí telefónu z vrecka</string>
+  <!-- Label for feature switch [CHAR LIMIT=30] -->
+  <string name="switch_bar_on">Zapnúť</string>
+  <!-- Label for feature switch [CHAR LIMIT=30] -->
+  <string name="switch_bar_off">Vypnúť</string>
+  <!-- Device specific settings -->
+  <string name="device_settings_app_name">Rozšírené nastavenia</string>
+  <!-- Ambient Display -->
+  <string name="ambient_display_title">Ambientné zobrazenie</string>
+  <!-- Tilt sensor -->
+  <string name="tilt_sensor_title">Senzor naklonenia</string>
+  <!-- Proximity sensor -->
+  <string name="proximity_sensor_title">Senzor priblíženia</string>
+  <!-- Hand wave gesture -->
+  <string name="hand_wave_gesture_title">Mávnutie ruky</string>
+  <string name="hand_wave_gesture_summary">Pulzné oznámenia po mávnutí rukou</string>
+  <!-- Pick-up gesture -->
+  <string name="pick_up_gesture_title">Zdvihnutie</string>
+  <string name="pick_up_gesture_summary">Upozorniť pulzovaním pri zdvihnutí</string>
+  <!-- Pocket gesture -->
+  <string name="pocket_gesture_title">Vrecko</string>
+  <string name="pocket_gesture_summary">Pulzné oznámenia po vybratí z vrecka</string>
 </resources>
