--- a/doze/res/values-uk/strings.xml
+++ b/doze/res/values-uk/strings.xml
@@ -19,38 +19,23 @@
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
   <!-- Label for feature switch [CHAR LIMIT=30] -->
   <string name="switch_bar_on">Увімкнено</string>
-
   <!-- Label for feature switch [CHAR LIMIT=30] -->
   <string name="switch_bar_off">Вимкнено</string>
-
   <!-- Device specific settings -->
   <string name="device_settings_app_name">Додаткові налаштування</string>
-
   <!-- Ambient Display -->
-  <string name="ambient_display_title">Індикація подій</string>
-  <string name="ambient_display_enable_title">Індикація подій</string>
-  <string name="ambient_display_enable_summary">Вмикати екран при отриманні мповіщень</string>
-  <string name="ambient_display_summary">Вмикати екран при отриманні повідомлень</string>
-  <string name="ambient_display_summary_on">Екран вмикатиметься при отриманні сповіщень</string>
-  <string name="ambient_display_summary_off">Екран не буде вмикатися при отриманні повідомлень</string>
-
+  <string name="ambient_display_title">Ambient дисплей</string>
   <!-- Tilt sensor -->
   <string name="tilt_sensor_title">Датчик нахилу</string>
-
   <!-- Proximity sensor -->
   <string name="proximity_sensor_title">Датчик наближення</string>
-
   <!-- Hand wave gesture -->
-  <string name="hand_wave_gesture_title">Помах рукою</string>
-  <string name="hand_wave_gesture_summary">Проведіть долонею над екраном. щоб переглянути сповіщення</string>
-  <string name="hand_wave_gesture_flat_title">Враховувати положення пристрою</string>
-  <string name="hand_wave_gesture_flat_summary">Показувати сповіщення тільки тоді, коли телефон лежить на плоскій поверхні екраном догори</string>
-
+  <string name="hand_wave_gesture_title">Жести рукою</string>
+  <string name="hand_wave_gesture_summary">Пульсуючі сповіщення при жестах руками</string>
   <!-- Pick-up gesture -->
   <string name="pick_up_gesture_title">Підняти</string>
   <string name="pick_up_gesture_summary">Показувати сповіщення при підніманні пристрою</string>
-
   <!-- Pocket gesture -->
   <string name="pocket_gesture_title">Кишеня</string>
-  <string name="pocket_gesture_summary">Показувати сповіщення при вийманні пристрою з кишені</string>
+  <string name="pocket_gesture_summary">Пульсуючі сповіщення при вийманні з кишені</string>
 </resources>
