--- a/XiaomiParts/res/values/strings.xml
+++ b/XiaomiParts/res/values/strings.xml
@@ -38,4 +38,9 @@
     <string name="kcal_greyscale_title">Greyscale</string>
     <string name="kcal_greyscale_summary">Fully disable saturation</string>
     <string name="menu_reset">Reset</string>
+
+    <string name="sound_title">Sound</string>
+    <string name="headphone_gain">Headphone gain</string>
+    <string name="speaker_gain">Speaker gain</string>
+    <string name="mic_gain">Microphone gain</string>
 </resources>
