--- a/XiaomiParts/res/values-uk/strings.xml
+++ b/XiaomiParts/res/values-uk/strings.xml
@@ -40,6 +40,8 @@
     <string name="menu_reset">Скинути</string>
 
     <string name="sound_title">Звук</string>
+    <string name="sound_control_title">Управління звуком</string>
+    <string name="sound_control_summary">Налаштування підсилення звуку навушників, динаміка та мікрофону</string>
     <string name="headphone_gain">Підсилення навушників</string>
     <string name="speaker_gain">Підсилення динаміка</string>
     <string name="mic_gain">Підсилення мікрофону</string>
